# OpenWXR

./: .gitignore  .gitmodules  CMakeLists.txt  build_release
.github/workflows/: cmake-multi-platform.yml
acf-configs/Generic RDR-4B/: OpenWXR.cfg
acf-configs/MetroIII/: OpenWXR.cfg
acf-configs/ksgyL410/: OpenWXR.cfg
api/opengpws/: xplane_api.h
data/: Makefile  glsl_cleanup.sh
libraries/libacfutils-redist/include/acfutils/: acf_file.h  airportdb.h  apps.h  assert.h  avl.h  avl_impl.h  base64.h  cairo_utils.h  chartdb.h  cmd.h  compress.h  conf.h  core.h  crc64.h  cursor.h  delay_line.h  dr.h  dr_cmd_reg.h  dsf.h  except.h  font_utils.h  geom.h  glctx.h  glew.h  glew_os.h  glutils.h  glutils_zink.h  helpers.h  hexcode.h  hp_filter.h  htbl.h  icao2cc.h  intl.h  joystick.h  lacf_getline_impl.h  lacf_gl_pic.h  libconfig.h  list.h  list_impl.h  log.h  (+28 more)
libraries/libacfutils-redist/include/cglm/: affine-mat.h  affine.h  box.h  cam.h  common.h  mat2.h  mat4.h  plane.h  project.h  quat.h  types-struct.h  types.h  vec2-ext.h  vec3-ext.h  vec3.h  vec4-ext.h  vec4.h  version.h
libraries/libacfutils-redist/include/cglm/call/: cam.h  project.h  quat.h  vec2.h  vec4.h
libraries/libacfutils-redist/include/cglm/simd/: arm.h  intrin.h  x86.h
libraries/libacfutils-redist/include/cglm/simd/avx/: mat4.h
libraries/libacfutils-redist/include/cglm/simd/neon/: mat4.h
libraries/libacfutils-redist/include/cglm/simd/sse2/: affine.h  mat2.h  mat3.h  mat4.h  quat.h
libraries/libacfutils-redist/include/cglm/struct/: cam.h  project.h  quat.h  vec2-ext.h
libraries/libacfutils-redist/lin64/include/: cairo-version.h  cairo.h
libraries/libacfutils-redist/lin64/include/GL/: glew.h
libraries/libacfutils-redist/lin64/include/freetype/config/: ftconfig.h
libraries/libacfutils-redist/mac64/include/: cairo-features.h
libraries/libacfutils-redist/mac64/include/GL/: glew.h
libraries/libacfutils-redist/mingw64/include/freetype/config/: ftconfig.h
qmake/: .qmake.stash  build  qmake.pro
src/: CMakeLists.txt  atmo_xp11.c  standalone.c  xplane.c  xplane.h
src/.cache/clangd/index/: _mingw.h.DC4D821EB9EA72DE.idx  _mingw_ddk.h.E99D47B4693DF1B4.idx  _mingw_mac.h.F6052AC0825E3F47.idx  _mingw_off_t.h.2B5A9EDE280E8769.idx  _mingw_secapi.h.D01C8A8DA1E3D809.idx  atmo.h.9B74CDEFB5AE5AD0.idx  atmo_xp11.c.D3716404F4A929E1.idx  atmo_xp11.h.CC76ED79C2B13F9C.idx  corecrt.h.F865EDC84D5A0A97.idx  corecrt_stdio_config.h.791AC12C74ABF7CE.idx  corecrt_wstdlib.h.7D43B75C497CA194.idx  crtdefs.h.D7DF6831A18335FE.idx  dbg_log.c.3725A947AE661DD3.idx  dbg_log.h.9947D73F991BDD8A.idx  errno.h.C035069351CB80E8.idx  fontmgr.c.65D10D5CB61A4A6F.idx  fontmgr.h.8E718D3B9C4D0CD3.idx  glpriv.h.78264781115FDCF1.idx  limits.h.2DAC93544002F4D6.idx  limits.h.43E17549091DD8F7.idx  limits.h.DE17B938EEC42943.idx  malloc.h.9DB077AE0CA6E6AA.idx  prototype.c.51AADA22BAAC2213.idx  prototype.h.3E56D5AA25FE6D37.idx  standalone.c.FE3D65AE6EBABD4E.idx  standalone.h.FD5017DB2FD375AD.idx  stddef.h.1230E49C170D6D34.idx  stddef.h.12D2A87AC170FF7E.idx  stdio.h.59259A7133276D94.idx  stdio_s.h.45BAF52C99419486.idx  stdlib.h.C1D767A2D1BDED70.idx  stdlib.h.C22FA74B32A31F84.idx  stdlib_s.h.3763F768BEC93E6C.idx  string.h.346F06EA9CCC775C.idx  string_s.h.AACAB16CF628984E.idx  swprintf.inl.C3EA405E18F3EB8F.idx  syslimits.h.73A1F3EE8C5A4F58.idx  vadefs.h.962C39CFAE4321B2.idx  vadefs.h.993A3BA6ED29B3ED.idx  wxr.c.B3B3AA2192A65845.idx  (+5 more)
src/.codelite/: src.session
src/.ctagsd/: ctagsd.json  file_list.txt
